--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Rogério Rodrigues Lima"
+title                    : "Rogerio Rodrigues Lima"
 title_separator          : "-"
 name                     : &name "Rogerio Rodrigues Lima"
 description              : &description "PhD Candidate @ WVU"
