--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/rogerio-lima-16b18416/"
   orcid            : "https://orcid.org/0000-0001-5624-0116"
   pinterest        :
   soundcloud       :
