--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rogerio Lima"
   avatar           : "profile.jpg"
-  bio              : "PhD Candidate @ West Virginia University"
+  bio              : "PhD Student @ West Virginia University"
   location         : "Morgantown/WV"
   employer         :
   pubmed           : 
