--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Rogerio Rodrigues Lima"
 title_separator          : "-"
 name                     : &name "Rogerio Rodrigues Lima"
-description              : &description "PhD Student @ WVU"
+description              : &description "PhD Candidate @ WVU"
 url                      : https://rlima-rogerio.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rlima-rogerio/rlima-rogerio.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rogerio Lima"
   avatar           : "profile.jpg"
-  bio              : "PhD Student @ West Virginia University"
+  bio              : "PhD Candidate @ West Virginia University"
   location         : "Morgantown/WV"
   employer         :
   pubmed           : 
