--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rogerio Lima, PhD"
   avatar           : "profile.jpg"
-  bio              : "PhD"
+  bio              : "Professor | Robotics Researcher"
   location         : "Belo Horizonte/MG - Brazil"
   employer         :
   pubmed           : 
