--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Rogerio Rodrigues Lima"
 title_separator          : "-"
 name                     : &name "Rogerio Rodrigues Lima"
-description              : &description "Engineer & Robotics Researcher"
+description              : &description "Professor | Robotics Researcher"
 url                      : https://rlima-rogerio.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rlima-rogerio/rlima-rogerio.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rogerio Lima, PhD"
   avatar           : "profile.jpg"
-  bio              : "Professor | Robotics Researcher"
+  bio              : "Robotics Researcher"
   location         : "Belo Horizonte/MG - Brazil"
   employer         :
   pubmed           : 
